crates/swc_ecma_parser/tests/jsx/errors/wrong-closing-tag/input.js.stderr
error: Unexpected eof
 --> $DIR/tests/jsx/errors/wrong-closing-tag/input.js:1:12
  |
1 | <Foo></Bar>
  |            ^

